added rich read method and some tests

--- a/sunshine-api/pom.xml
+++ b/sunshine-api/pom.xml
@@ -8,7 +8,7 @@
         <artifactId>sunshine-main</artifactId>
     </parent>
     <artifactId>sunshine-api</artifactId>
-
+    <packaging>bundle</packaging>
     <name>Sunshine - 001 API</name>
 
 </project>
